codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_conversations codex_agent_conversations_t;
typedef struct codex_agent_conversation codex_agent_conversation_t;
typedef struct codex_agent_operation codex_agent_operation_t;
typedef struct codex_agent_subscription codex_agent_subscription_t;
typedef struct codex_agent_snapshot codex_agent_snapshot_t;
typedef struct codex_agent_conversation_id codex_agent_conversation_id_t;
typedef struct codex_agent_conversation_summary codex_agent_conversation_summary_t;
typedef struct codex_agent_turn_progress codex_agent_turn_progress_t;
typedef struct codex_agent_message codex_agent_message_t;
typedef struct codex_agent_conversation_value codex_agent_conversation_value_t;
typedef struct codex_agent_turn_request codex_agent_turn_request_t;
typedef struct codex_agent_string_view {
    const uint8_t *data;
    size_t size;
} codex_agent_string_view_t;
/*
 * Input views are copied before an API call returns and must contain strict
 * UTF-8. Versioned input structs accept struct_size values at least as large
 * as the ABI 1.1 definition. String-copy functions report the exact number of
 * UTF-8 bytes in out_required, do not append NUL, and do not partially modify
 * the destination when returning BUFFER_TOO_SMALL.
 *
 * Every out_* handle slot must be non-null and initially contain NULL. Every
 * non-OK return preserves its exact value. Every non-NULL handle returned on
 * OK is a distinct owned token scoped to its creating context. Copying a raw
 * pointer does not create another token or owner; use the matching retain
 * function, when provided, to obtain a distinct owned alias.
 *
 * A non-null release or destroy slot whose value is NULL is idempotently
 * successful. Release and destroy functions write NULL only on OK; every
 * non-OK result, including BUSY, preserves the exact slot value. Apart from
 * the callback-publication guarantee below, caller-owned slots must not be
 * accessed concurrently.
 */

/*
 * Asynchronous callbacks run on library worker threads, are serialized per
 * context, and may begin before the initiating API call returns. The operation
 * or subscription output token is published before its first callback begins,
 * and an operation result is published before its operation callback begins.
 *
 * Callbacks must not unwind across the C boundary. A non-NULL operation
 * callback and its user_data must remain valid until that callback returns or
 * operation destruction returns OK. A state callback and its user_data must
 * remain valid until its terminal callback returns or subscription destruction
 * returns OK. BUSY destruction preserves the handle and does not end these
 * lifetimes; a callback may still begin or be running.
 */
typedef void (CODEX_AGENT_CALL *codex_agent_operation_callback_t)(
    codex_agent_context_t *context,
    codex_agent_operation_t *operation,
    void *user_data);
/*
 * Ownership of each non-NULL snapshot transfers when the state callback is
 * entered. The snapshot is immutable and must be passed once to
 * codex_agent_snapshot_destroy unless its context is successfully destroyed
 * first.
 */
typedef void (CODEX_AGENT_CALL *codex_agent_state_callback_t)(
    codex_agent_context_t *context,
    codex_agent_subscription_t *subscription,
    codex_agent_status_t event_status,
    codex_agent_snapshot_t *snapshot,
    int32_t is_terminal,
    void *user_data);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversations_list(
    codex_agent_context_t *context,
    codex_agent_conversations_t *conversations,
    codex_agent_operation_callback_t callback,
    void *user_data,
    codex_agent_operation_t **out_operation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversations_read(
    codex_agent_context_t *context,
    codex_agent_conversations_t *conversations,
    codex_agent_conversation_id_t *conversation_id,
    codex_agent_operation_callback_t callback,
    void *user_data,
    codex_agent_operation_t **out_operation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversations_rename(
    codex_agent_context_t *context,
    codex_agent_conversations_t *conversations,
    codex_agent_conversation_id_t *conversation_id,
    const codex_agent_string_view_t *name,
    codex_agent_operation_callback_t callback,
    void *user_data,
    codex_agent_operation_t **out_operation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversations_delete(
    codex_agent_context_t *context,
    codex_agent_conversations_t *conversations,
    codex_agent_conversation_id_t *conversation_id,
    codex_agent_operation_callback_t callback,
    void *user_data,
    codex_agent_operation_t **out_operation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_send_request(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_turn_request_t *request,
    codex_agent_operation_callback_t callback,
    void *user_data,
    codex_agent_operation_t **out_operation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_current_messages_get(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_snapshot_t **out_snapshot);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_current_messages_subscribe(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_state_callback_t callback,
    void *user_data,
    codex_agent_subscription_t **out_subscription);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_active_turn_progress_get(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_snapshot_t **out_snapshot);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_active_turn_progress_subscribe(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_state_callback_t callback,
    void *user_data,
    codex_agent_subscription_t **out_subscription);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_can_cancel_turn_get(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_snapshot_t **out_snapshot);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_can_cancel_turn_subscribe(
    codex_agent_context_t *context,
    codex_agent_conversation_t *conversation,
    codex_agent_state_callback_t callback,
    void *user_data,
    codex_agent_subscription_t **out_subscription);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_current_messages_count(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_conversation_current_messages_at(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    size_t index,
    codex_agent_message_t **out_message);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_active_turn_progress_has_value(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    int32_t *out_has_value);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_conversation_active_turn_progress_value(
    codex_agent_context_t *context,
    codex_agent_snapshot_t *snapshot,
    codex_agent_turn_progress_t **out_progress);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_operation_conversation_summaries_count(
    codex_agent_context_t *context,
    codex_agent_operation_t *operation,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_operation_conversation_summary_at(
    codex_agent_context_t *context,
    codex_agent_operation_t *operation,
    size_t index,
    codex_agent_conversation_summary_t **out_summary);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_operation_conversation_value(
    codex_agent_context_t *context,
    codex_agent_operation_t *operation,
    codex_agent_conversation_value_t **out_conversation);