codex-agent-bindings/csharp/src/CodexAgent/Interop/NativeConversationMethods.cs

using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace CodexAgent.Interop;

internal static unsafe partial class NativeMethods
{
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversations_list")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationsListImport(nint context, nint conversations, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationsList(nint context, nint conversations, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationsListImport(context, conversations, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversations_read")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationsReadImport(nint context, nint conversations, nint conversationId, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationsRead(nint context, nint conversations, nint conversationId, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationsReadImport(context, conversations, conversationId, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversations_rename")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationsRenameImport(nint context, nint conversations, nint conversationId, NativeStringView* name, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationsRename(nint context, nint conversations, nint conversationId, NativeStringView* name, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationsRenameImport(context, conversations, conversationId, name, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversations_delete")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationsDeleteImport(nint context, nint conversations, nint conversationId, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationsDelete(nint context, nint conversations, nint conversationId, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationsDeleteImport(context, conversations, conversationId, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_operation_conversation_summaries_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus OperationConversationSummariesCountImport(nint context, nint operation, out nuint count);
    internal static CodexStatus OperationConversationSummariesCount(nint context, nint operation, out nuint count)
    { var status = OperationConversationSummariesCountImport(context, operation, out count); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_operation_conversation_summary_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus OperationConversationSummaryAtImport(nint context, nint operation, nuint index, out nint summary);
    internal static CodexStatus OperationConversationSummaryAt(nint context, nint operation, nuint index, out nint summary)
    { var status = OperationConversationSummaryAtImport(context, operation, index, out summary); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_operation_conversation_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus OperationConversationValueImport(nint context, nint operation, out nint conversation);
    internal static CodexStatus OperationConversationValue(nint context, nint operation, out nint conversation)
    { var status = OperationConversationValueImport(context, operation, out conversation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_send_request")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationSendRequestImport(nint context, nint conversation, nint request, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationSendRequest(nint context, nint conversation, nint request, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationSendRequestImport(context, conversation, request, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_current_messages_get")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCurrentMessagesGetImport(nint context, nint conversation, out nint snapshot);
    internal static CodexStatus ConversationCurrentMessagesGet(nint context, nint conversation, out nint snapshot)
    { var status = ConversationCurrentMessagesGetImport(context, conversation, out snapshot); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_current_messages_subscribe")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCurrentMessagesSubscribeImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription);
    internal static CodexStatus ConversationCurrentMessagesSubscribe(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription)
    { var status = ConversationCurrentMessagesSubscribeImport(context, conversation, callback, userData, out subscription); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_current_messages_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCurrentMessagesCountImport(nint context, nint snapshot, out nuint count);
    internal static CodexStatus ConversationCurrentMessagesCount(nint context, nint snapshot, out nuint count)
    { var status = ConversationCurrentMessagesCountImport(context, snapshot, out count); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_current_messages_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCurrentMessagesAtImport(nint context, nint snapshot, nuint index, out nint message);
    internal static CodexStatus ConversationCurrentMessagesAt(nint context, nint snapshot, nuint index, out nint message)
    { var status = ConversationCurrentMessagesAtImport(context, snapshot, index, out message); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_active_turn_progress_get")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationActiveTurnProgressGetImport(nint context, nint conversation, out nint snapshot);
    internal static CodexStatus ConversationActiveTurnProgressGet(nint context, nint conversation, out nint snapshot)
    { var status = ConversationActiveTurnProgressGetImport(context, conversation, out snapshot); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_active_turn_progress_subscribe")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationActiveTurnProgressSubscribeImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription);
    internal static CodexStatus ConversationActiveTurnProgressSubscribe(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription)
    { var status = ConversationActiveTurnProgressSubscribeImport(context, conversation, callback, userData, out subscription); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_active_turn_progress_has_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationActiveTurnProgressHasValueImport(nint context, nint snapshot, out int present);
    internal static CodexStatus ConversationActiveTurnProgressHasValue(nint context, nint snapshot, out int present)
    { var status = ConversationActiveTurnProgressHasValueImport(context, snapshot, out present); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_active_turn_progress_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationActiveTurnProgressValueImport(nint context, nint snapshot, out nint progress);
    internal static CodexStatus ConversationActiveTurnProgressValue(nint context, nint snapshot, out nint progress)
    { var status = ConversationActiveTurnProgressValueImport(context, snapshot, out progress); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_can_cancel_turn_get")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCanCancelTurnGetImport(nint context, nint conversation, out nint snapshot);
    internal static CodexStatus ConversationCanCancelTurnGet(nint context, nint conversation, out nint snapshot)
    { var status = ConversationCanCancelTurnGetImport(context, conversation, out snapshot); RecordExactCall(); return status; }
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_can_cancel_turn_subscribe")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationCanCancelTurnSubscribeImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription);
    internal static CodexStatus ConversationCanCancelTurnSubscribe(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription)
    { var status = ConversationCanCancelTurnSubscribeImport(context, conversation, callback, userData, out subscription); RecordExactCall(); return status; }
